# DraftCore

./: .gitignore  AGENTS.md  README.md  pyproject.toml  实施说明.md  阶段5任务清单.md
docs/: PRD-lite.md  architecture.md  cli-spec.md  configuration.md  dev-setup.md  implementation-guide.md  sample-conventions.md  schema.md  testing.md
docs/adr/: 001-tech-stack.md
draftcore/: __init__.py
draftcore/app/: __init__.py
draftcore/app/cli/: __init__.py  __main__.py  archive.py  asset.py  collection.py  draft.py  export.py  project.py  reuse.py  support.py
draftcore/app/config/: __init__.py  settings.py
draftcore/app/db/: __init__.py  session.py
draftcore/app/exporters/: __init__.py  markdown.py
draftcore/app/models/: __init__.py  entities.py  enums.py
draftcore/app/parsers/: __init__.py  registry.py
samples/assets/: parser-docx-partial-01.docx  workflow-raw-01.md  workflow-raw-02.md  workflow-reference-01.txt  workflow-template-01.md
samples/expected/: acceptance-task1-01.json  acceptance-task2-01.json  acceptance-task4-01.json  acceptance-task5-01.json  acceptance-task6-01.json  workflow-image-01.json  workflow-raw-01.json  workflow-reference-01.json  workflow-template-01.json
tests/e2e/: test_task_acceptance.py
tests/fixtures/: config-invalid-output.toml  config-valid.toml
tests/integration/: test_task1_cli.py  test_task2_cli.py  test_task3_cli.py  test_task4_cli.py  test_task5_cli.py  test_task6_cli.py
tests/unit/: test_archive_service.py  test_asset_service.py  test_collection_service.py  test_draft_service.py  test_reuse_service.py  test_settings.py
(+9 files in other folders)
